--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task1",
   "version": "1.0.0",
-  "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,14 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^5.0.0",
     "sass": "^1.44.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dolarius/Task1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dolarius/Task1/issues"
+  },
+  "homepage": "https://github.com/Dolarius/Task1#readme",
+  "description": ""
 }
